#56: close block add menu when slash is removed

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -33,6 +33,7 @@ input, textarea, select { font-family: 'Lcg'; }
 .dn { display: none !important; }
 .txt { vertical-align: middle; display: inline-block; line-height: 1; }
 .flex { display: flex; }
+.cp { cursor: pointer; }
 
 .fileWrap { position: relative; overflow: hidden; cursor: pointer; }
 .fileWrap { 
