--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -43,7 +43,7 @@
 	.block.isToggled > .wrapContent > .selectable > .dropTarget > .flex > .markers > .marker.toggle { transform: rotateZ(90deg); }
 	
 	.block > .wrapContent > .selectable.isDragging > .dropTarget { opacity: 0.3; }
-	.block > .wrapContent > .selectable.isSelected > .dropTarget { background: #f7f5f0; border-radius: 4px; }
+	.block > .wrapContent > .selectable.isSelected > .dropTarget { background: #f7f5f0 !important; border-radius: 4px; }
 	
 	.block.isSelected .children .selectable { background: #f7f5f0; border-radius: 4px; }
 }
