--- a/src/scss/block/video.scss
+++ b/src/scss/block/video.scss
@@ -1,9 +1,11 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block.blockVideo { padding: 7px 0px; }
+	.block.blockVideo { padding: 5px 0px; }
 	.block.blockVideo {
 		video { width: 100%; }
 		.error { margin: 0px; font-size: 13px; line-height: 18px; }
 	}
+	
+	.block.blockVideo > .wrapContent > .selectable > .dropTarget { padding: 2px; }
 }
