--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -48,7 +48,7 @@
 
 .icon.user { 
 	width: 64px; height: 64px; border-radius: 100%; font-weight: 500; position: relative; overflow: hidden;
-	text-transform: uppercase; font-size: 22px; color: #fff; text-align: center; line-height: 62px;
+	text-transform: uppercase; font-size: 22px; color: #fff; text-align: center; line-height: 62px; background-color: #2aa7ee;
 }
 .icon.user.c18 { width: 18px; height: 18px; line-height: 18px; font-size: 11px; }
 .icon.user.c40 { width: 40px; height: 40px; line-height: 40px; font-size: 18px; }
