--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,7 +1,7 @@
 $colorGrey: #e0ded2;
 $colorBlack: #2c2b27;
 $colorBrown: #aca996;
-$colorOrange: #ffbb2c;
+$colorOrange: #ffb522;
 $colorRed: #f86240;
 $colorPurple: #c781de;
 $colorBlue: #4fb1ef;
