--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -67,6 +67,10 @@
 	.blockText.quote { padding: 7px 0px 7px 0px; font-size: 18px; line-height: 26px; }
 	.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .line { width: 2px; height: 100%; position: absolute; left: 11px; top: 0px; background: $colorOrange; }
 	.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap { padding-left: 28px; }
+	.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .wrap {
+		.placeHolder { left: 28px; }
+	}
+	
 	.blockText.code { font-family: 'Mono'; line-height: 1.71; margin: 7px 0px; }
 	.blockText.code > .wrapContent > .selectable > .dropTarget { padding: 42px 16px 16px 16px; background: rgba(247,245,240,0.5); }
 	.blockText.code > .wrapContent > .selectable > .dropTarget > .flex { position: static; } 
