--- a/src/scss/block/layout.scss
+++ b/src/scss/block/layout.scss
@@ -7,7 +7,7 @@
 	.block.blockLayout.c0 > .wrapMenu { display: none; }
 	.block.blockLayout.c0 > .wrapContent { width: 100%; overflow: visible; }
 	.block.blockLayout.c0 > .wrapContent > .children { display: flex; }
-	.block.blockLayout.c0 > .wrapContent > .dropTarget { width: 100%; height: 15px; position: absolute; left: 0px; }
+	.block.blockLayout.c0 > .wrapContent > .dropTarget { width: calc(100% - 46px); height: 15px; position: absolute; left: 46px; border-radius: 0px !important; }
 	.block.blockLayout.c0 > .wrapContent > .dropTarget.targetTop { top: -15px; }
 	.block.blockLayout.c0 > .wrapContent > .dropTarget.targetBot { bottom: -15px; }
 	
