--- a/src/scss/block/link.scss
+++ b/src/scss/block/link.scss
@@ -14,4 +14,6 @@
 			font-size: 13px; line-height: 18px; letter-spacing: 0.1px; color: #aca996; padding: 0px 6px;
 		}
 	}
+	
+	.block.blockLink > .wrapContent > .selectable > .dropTarget { padding-top: 4px; padding-bottom: 2px; }
 }
