--- a/src/scss/menu/help.scss
+++ b/src/scss/menu/help.scss
@@ -4,14 +4,9 @@
 	.menu.menuHelp { width: 224px; }
 	.menu.menuHelp {
 		.icon { width: 24px; height: 24px; }
+		.icon.help { background-size: 20px 20px; background-image: url('~img/icon/menu/help/help0.svg'); }
 		.icon.chat { background-size: 18px 20px; background-image: url('~img/icon/menu/help/chat0.svg'); }
 		.icon.feature { background-size: 22px 21px; background-image: url('~img/icon/menu/help/feature0.svg'); }
 		.icon.community { background-size: 18px 16px; background-image: url('~img/icon/menu/help/community0.svg'); }
-		
-		.item:hover, .item.active {
-			.icon.chat { background-image: url('~img/icon/menu/help/chat1.svg'); }
-			.icon.feature { background-image: url('~img/icon/menu/help/feature1.svg'); }
-			.icon.community { background-image: url('~img/icon/menu/help/community1.svg'); }
-		}
 	}
 }
