--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -49,3 +49,9 @@
 }
 
 .headerMainEdit { background: #fff; padding: 9px 0px 9px 80px; }
+.headerMainEdit {
+	.menu { top: 8px; right: 12px; }
+	.menu {
+		.icon.more { width: 24px; height: 24px; background-image: url('~img/icon/menu/action/more0.svg'); cursor: pointer; }
+	}
+}
