--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -35,6 +35,9 @@
 .icon.remove { background-image: url('~img/icon/menu/action/remove0.svg'); }
 .icon.more { background-image: url('~img/icon/menu/action/more0.svg'); }
 
+.icon.undo { background-size: 20px 20px !important; background-image: url('~img/icon/menu/action/undo0.svg'); }
+.icon.redo { background-size: 20px 20px !important; background-image: url('~img/icon/menu/action/redo0.svg'); }
+
 .icon.color {
 	.inner { 
 		border: 1px solid #dfddd0; width: 24px; height: 24px; line-height: 24px; text-align: center;
