--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -35,8 +35,8 @@
 .icon.remove { background-image: url('~img/icon/menu/action/remove0.svg'); }
 .icon.more { background-image: url('~img/icon/menu/action/more0.svg'); }
 
-.icon.undo { background-size: 20px 20px !important; background-image: url('~img/icon/menu/action/undo0.svg'); }
-.icon.redo { background-size: 20px 20px !important; background-image: url('~img/icon/menu/action/redo0.svg'); }
+.icon.undo { background-image: url('~img/icon/menu/action/undo0.svg'); }
+.icon.redo { background-image: url('~img/icon/menu/action/redo0.svg'); }
 
 .icon.color {
 	.inner { 
