--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -2,7 +2,7 @@
 .smile {
 	.emoji-mart-emoji { height: 100%; display: inline-block; vertical-align: middle; }
 	.emoji-mart-emoji {
-		span { height: 100%; display: inline-block; vertical-align: middle; background-image: url('~img/emoji.png') !important; }
+		span { height: 100%; display: inline-block; vertical-align: middle; /*background-image: url('~img/emoji.png') !important;*/ }
 	}
 }
 
