--- a/src/scss/menu/block/add.scss
+++ b/src/scss/menu/block/add.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menuBlockStyle, .menuBlockAction, .menuBlockMore { width: 192px !important; }
-	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menuBlockStyle, .menuBlockAction, .menuBlockMore {
+	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menu.menuBlockStyle, .menu.menuBlockAction, .menu.menuBlockMore { width: 192px !important; }
+	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menu.menuBlockStyle, .menu.menuBlockAction, .menu.menuBlockMore {
 		.empty { font-size: 13px; line-height: 18px; padding: 4px 16px; }
 	
 		.item { padding: 4px 16px !important; }
@@ -22,19 +22,17 @@
 	
 	.menu.menuBlockAdd.withFilter, .menu.menuBlockAddSub.withFilter { width: 288px !important; }
 	
-	.menu.menuBlockAdd, .menu.menuBlockAddSub {
+	.menu.menuBlockAdd, .menu.menuBlockAddSub, .menu.menuBlockStyle {
 		.item.withColor:hover, .item.withColor.active {
 			.icon.text { background-image: url('~img/icon/menu/action/block/text1.svg'); }
 			.icon.list { background-image: url('~img/icon/menu/action/block/list1.svg'); }
-			.icon.tool { background-image: url('~img/icon/menu/action/block/tool1.svg'); }
-			.icon.media { background-image: url('~img/icon/menu/action/block/media1.svg'); }
-			.icon.other { background-image: url('~img/icon/menu/action/block/other1.svg'); }
 			
 			.icon.header1 { background-image: url('~img/icon/menu/action/block/header11.svg'); }
 			.icon.header2 { background-image: url('~img/icon/menu/action/block/header21.svg'); }
 			.icon.header3 { background-image: url('~img/icon/menu/action/block/header31.svg'); }
 			.icon.quote { background-image: url('~img/icon/menu/action/block/quote1.svg'); }
 			
+			.icon.page { background-image: url('~img/icon/menu/action/block/page1.svg'); }
 			.icon.task { background-image: url('~img/icon/menu/action/block/task1.svg'); }
 			.icon.set { background-image: url('~img/icon/menu/action/block/set1.svg'); }
 			.icon.contact { background-image: url('~img/icon/menu/action/block/contact1.svg'); }
@@ -44,10 +42,14 @@
 			.icon.numbered { background-image: url('~img/icon/menu/action/block/numbered1.svg'); }
 			.icon.toggle { background-image: url('~img/icon/menu/action/block/toggle1.svg'); }
 			
+			.icon.file { background-image: url('~img/icon/menu/action/block/file1.svg'); }
 			.icon.picture { background-image: url('~img/icon/menu/action/block/picture1.svg'); }
 			.icon.video { background-image: url('~img/icon/menu/action/block/video1.svg'); }
 			.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
 			.icon.code { background-image: url('~img/icon/menu/action/block/code1.svg'); }
+			
+			.icon.line { background-image: url('~img/icon/menu/action/block/line1.svg'); }
+			.icon.dot { background-image: url('~img/icon/menu/action/block/dot1.svg'); }
 		}
 	}
 }
