--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -1,8 +1,7 @@
 .icon.text { background-image: url('~img/icon/menu/action/block/text0.svg'); }
 .icon.list { background-image: url('~img/icon/menu/action/block/list0.svg'); }
-.icon.tool { background-image: url('~img/icon/menu/action/block/tool0.svg'); }
-.icon.media { background-image: url('~img/icon/menu/action/block/media0.svg'); }
-.icon.other { background-image: url('~img/icon/menu/action/block/other0.svg'); }
+.icon.page { background-image: url('~img/icon/menu/action/block/page0.svg'); }
+
 
 .icon.header1 { background-image: url('~img/icon/menu/action/block/header10.svg'); }
 .icon.header2 { background-image: url('~img/icon/menu/action/block/header20.svg'); }
@@ -18,10 +17,14 @@
 .icon.contact { background-image: url('~img/icon/menu/action/block/contact0.svg'); }
 .icon.existing { background-image: url('~img/icon/menu/action/block/existing0.svg'); }
 
+.icon.file { background-image: url('~img/icon/menu/action/block/file0.svg'); }
 .icon.picture { background-image: url('~img/icon/menu/action/block/picture0.svg'); }
 .icon.video { background-image: url('~img/icon/menu/action/block/video0.svg'); }
 .icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark0.svg'); }
 .icon.code { background-image: url('~img/icon/menu/action/block/code0.svg'); }
+
+.icon.line { background-image: url('~img/icon/menu/action/block/line0.svg'); }
+.icon.dot { background-image: url('~img/icon/menu/action/block/dot0.svg'); }
 
 .icon.bold { background-image: url('~img/icon/menu/action/mark/bold0.svg'); }
 .icon.italic { background-image: url('~img/icon/menu/action/mark/italic0.svg'); }
