context menu design fixes

--- a/src/scss/menu/block/context.scss
+++ b/src/scss/menu/block/context.scss
@@ -4,5 +4,22 @@
 	.menu.menuBlockContext { padding: 0px; transform-origin: 50% 50% !important; }
 	.menu.menuBlockContext {
 		.icon.blockStyle { width: 48px; background-position: 8px center; }
+		
+		.icon.blockStyle.text { background-image: url('~img/icon/menu/style/text.svg'); }
+		.icon.blockStyle.header1 { background-image: url('~img/icon/menu/style/header1.svg'); }
+		.icon.blockStyle.header2 { background-image: url('~img/icon/menu/style/header2.svg'); }
+		.icon.blockStyle.header3 { background-image: url('~img/icon/menu/style/header3.svg'); }
+		.icon.blockStyle.quote { background-image: url('~img/icon/menu/style/quote.svg'); }
+		.icon.blockStyle.list { background-image: url('~img/icon/menu/style/list.svg'); }
+		.icon.blockStyle.checkbox { background-image: url('~img/icon/menu/style/checkbox.svg'); }
+		.icon.blockStyle.numbered { background-image: url('~img/icon/menu/style/numbered.svg'); }
+		.icon.blockStyle.toggle { background-image: url('~img/icon/menu/style/toggle.svg'); }
+		.icon.blockStyle.code { background-image: url('~img/icon/menu/style/code.svg'); }
+		
+		.icon.active.bold { background-image: url('~img/icon/menu/action/mark/bold1.svg'); }
+		.icon.active.code { background-image: url('~img/icon/menu/action/mark/code1.svg'); }
+		.icon.active.italic { background-image: url('~img/icon/menu/action/mark/italic1.svg'); }
+		.icon.active.link { background-image: url('~img/icon/menu/action/mark/link1.svg'); }
+		.icon.active.strike { background-image: url('~img/icon/menu/action/mark/strike1.svg'); }
 	}
 }
