--- a/src/scss/menu/block/style.scss
+++ b/src/scss/menu/block/style.scss
@@ -1,7 +1,10 @@
 @import "~scss/_vars";
 
 .menus {
+	.menu.menuBlockStyle { padding: 7px 0px; }
 	.menu.menuBlockStyle {
-		.section { padding: 4px 0px; }
+		.section { padding: 7px 0px; }
+		.section:first-child { padding-top: 0px; }
+		.section:last-child { padding-bottom: 0px; }
 	}
 }
