--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -37,6 +37,9 @@
 .icon.copy { background-image: url('~img/icon/menu/action/copy0.svg'); }
 .icon.remove { background-image: url('~img/icon/menu/action/remove0.svg'); }
 .icon.more { background-image: url('~img/icon/menu/action/more0.svg'); }
+.icon.download { background-image: url('~img/icon/menu/action/download0.svg'); }
+.icon.rename { background-image: url('~img/icon/menu/action/rename0.svg'); }
+.icon.replace { background-image: url('~img/icon/menu/action/replace0.svg'); }
 
 .icon.undo { background-image: url('~img/icon/menu/action/undo0.svg'); }
 .icon.redo { background-image: url('~img/icon/menu/action/redo0.svg'); }
