--- a/src/scss/block/div.scss
+++ b/src/scss/block/div.scss
@@ -4,8 +4,16 @@
 	.block.blockDiv { padding: 0px; line-height: 0px; }
 	.block.blockDiv {
 		.dropTarget { height: 15px; }
-		.icon.dnd { height: 12px; margin: 2px 8px 0px 0px; }
+		.icon.dnd { height: 12px; margin: 2px 6px 0px 0px; }
 		.icon.dnd:hover { background-image: none; }
-		.div { width: 100%; height: 1px; background: #d2d0c2; position: absolute; top: 50%; left: 0px; }
+		.div { width: 100%; position: absolute; top: 50%; left: 0px; text-align: center; }
+	}
+	.block.blockDiv.c0 {
+		.div { height: 1px; background: #d2d0c2; }
+	}
+	.block.blockDiv.c1 {
+		.div { height: 2px; margin-top: -1px; white-space: nowrap; }
+		.dot { width: 2px; height: 2px; background: $colorBlack; margin-right: 18px; display: inline-block; vertical-align: top; }
+		.dot:last-child { margin: 0px; }
 	}
 }
