--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -9,15 +9,15 @@
 		.inputWithFile { margin: 6px 0px; }
 		
 		.name {
-			min-width: 40px; max-width: calc(100% - 180px); height: 24px; line-height: 24px; display: inline-block; overflow: hidden;
+			min-width: 40px; max-width: calc(100% - 180px); height: 22px; line-height: 22px; display: inline-block; overflow: hidden;
 			vertical-align: top; padding-top: 1px; cursor: pointer;
 		}
 		.size {
-			max-width: 100px; font-size: 13px; height: 24px; line-height: 24px; letter-spacing: 0.1px; color: #aca996; margin: 0px 8px;
+			max-width: 100px; font-size: 13px; height: 22px; line-height: 22px; letter-spacing: 0.1px; color: #aca996; margin: 0px 8px;
 			display: inline-block; vertical-align: top; padding-top: 1px;
 		}
 		.download {
-			width: 80px; font-size: 15px; height: 24px; line-height: 24px; letter-spacing: 0.2px; color: #2dbcfe;
+			width: 80px; font-size: 15px; height: 22px; line-height: 22px; letter-spacing: 0.2px; color: #2dbcfe;
 			transition: $transitionFast; opacity: 0; padding-top: 1px; display: inline-block; cursor: pointer;
 		}
 		.download:hover { color: #1092d9; }
@@ -36,4 +36,6 @@
 	.block.blockFile:hover {
 		.download { opacity: 1; }
 	}
+	
+	.block.blockFile > .wrapContent > .selectable > .dropTarget { padding-top: 4px; padding-bottom: 2px; }
 }
